--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
 main > .container {
   padding: 60px 15px 0;
 }
+
+.homeBG {
+  width: 100%;
+  background: url(/img/grid_background.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
