--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,10 @@ main > .container {
   background-size: cover;
   background-attachment: fixed;
 }
+
+.homeText {
+  font-family: modesto-open-shadow, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(195, 255, 0);
+}
